--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/PageRedact/Index.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/PageRedact/Index.cshtml
@@ -49,7 +49,7 @@
                 <div id="productMenuInfo">
                     <div>
                         <div>
-                            <h2 id="sys"><strong>@item.Name</strong></h2>
+                            <h2 id="sys" class="pt-4"><strong>@item.Name</strong></h2>
                         </div>
                     </div>
                    
