--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Home/SystemInfo.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Home/SystemInfo.cshtml
@@ -71,6 +71,13 @@
         <ul class="list-group list-group-flush">
             <li class="list-group-item"><a href="@Url.Action("ImageConfig","Home")"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icons-tabler-outline icon-tabler-photo-plus"><path stroke="none" d="M0 0h24v24H0z" fill="none" /><path d="M15 8h.01" /><path d="M12.5 21h-6.5a3 3 0 0 1 -3 -3v-12a3 3 0 0 1 3 -3h12a3 3 0 0 1 3 3v6.5" /><path d="M3 16l5 -5c.928 -.893 2.072 -.893 3 0l4 4" /><path d="M14 14l1 -1c.67 -.644 1.45 -.824 2.182 -.54" /><path d="M16 19h6" /><path d="M19 16v6" /></svg> Bilder</a></li>
             <li class="list-group-item active"><a href="@Url.Action("SystemInfo","Home")"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="currentColor" class="icon icon-tabler icons-tabler-filled icon-tabler-assembly"><path stroke="none" d="M0 0h24v24H0z" fill="none" /><path d="M13.666 1.429l6.75 3.98q .1 .06 .18 .133l.009 .008l.106 .075a3.22 3.22 0 0 1 1.284 2.39l.005 .203v7.284c0 1.175 -.643 2.256 -1.623 2.793l-6.804 4.302c-.98 .538 -2.166 .538 -3.2 -.032l-6.695 -4.237a3.23 3.23 0 0 1 -1.678 -2.826v-7.285a3.21 3.21 0 0 1 1.65 -2.808l6.775 -3.995a3.34 3.34 0 0 1 3.24 .015m-.64 5.343a2.03 2.03 0 0 0 -2 -.014l-3.023 1.804a1.99 1.99 0 0 0 -1.002 1.736v3.278a2 2 0 0 0 1.03 1.75l2.946 1.89c.657 .367 1.39 .367 1.994 .033l3.054 -1.955c.582 -.322 .976 -.992 .976 -1.719v-3.277l-.005 -.164a2 2 0 0 0 -.725 -1.391l-.092 -.07l-.056 -.047a1 1 0 0 0 -.096 -.064z" /></svg> SystemInfo</a></li>
+                <li class="list-group-item">
+                    <a href="@Url.Action("Index","PageRedact")">
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path d="M0 3.75C0 2.784.784 2 1.75 2h20.5c.966 0 1.75.784 1.75 1.75v16.5A1.75 1.75 0 0 1 22.25 22H1.75A1.75 1.75 0 0 1 0 20.25ZM22.5 7h-21v13.25c0 .138.112.25.25.25h20.5a.25.25 0 0 0 .25-.25Zm-10-3.5v2h10V3.75a.25.25 0 0 0-.25-.25ZM7 3.5v2h4v-2Zm-5.25 0a.25.25 0 0 0-.25.25V5.5h4v-2Z"></path></svg>
+                    Bearbeiten von Seiten</a></li>
+                <li class="list-group-item"><a href="@Url.Action("Blogs","Home")"> 
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" width="24" height="24"><path d="M0 1.75A.75.75 0 0 1 .75 1h4.253c1.227 0 2.317.59 3 1.501A3.743 3.743 0 0 1 11.006 1h4.245a.75.75 0 0 1 .75.75v10.5a.75.75 0 0 1-.75.75h-4.507a2.25 2.25 0 0 0-1.591.659l-.622.621a.75.75 0 0 1-1.06 0l-.622-.621A2.25 2.25 0 0 0 5.258 13H.75a.75.75 0 0 1-.75-.75Zm7.251 10.324.004-5.073-.002-2.253A2.25 2.25 0 0 0 5.003 2.5H1.5v9h3.757a3.75 3.75 0 0 1 1.994.574ZM8.755 4.75l-.004 7.322a3.752 3.752 0 0 1 1.992-.572H14.5v-9h-3.495a2.25 2.25 0 0 0-2.25 2.25Z"></path></svg>
+                    Blogs</a></li>
             <li class="list-group-item"><a href="@Url.Action("SendMail","Home")"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icons-tabler-outline icon-tabler-mail"><path stroke="none" d="M0 0h24v24H0z" fill="none" /><path d="M3 7a2 2 0 0 1 2 -2h14a2 2 0 0 1 2 2v10a2 2 0 0 1 -2 2h-14a2 2 0 0 1 -2 -2v-10z" /><path d="M3 7l9 6l9 -6" /></svg> E-Mail senden</a></li>
             <li class="list-group-item "><a href="@Url.Action("Index","Home")"> <img src="@("/compression/doppelzylinder.webp")" height="24" width="24" /> Profil-Doppelzylinder</a></li>
             <li class="list-group-item"><a href="@Url.Action("Profil_HalbzylinderRout","Home")"> <img src="@("/compression/halbzylinder.webp")" height="24" width="24" /> Profil-Halbzylinder</a></li>
@@ -153,6 +160,11 @@
             <input name="KeyName" id="NameSys" required value="@ViewBag.SystemChois.NameSysteam" type="text" class="form-control" />
             </div>
 
+                <div id="Image-load_item" class="mb-5">
+                    <label for="Images">Schlüssel Bild:</label>
+                    <input type="file" name="ImagesKey" multiple class="form-control" />
+                </div>
+
             <div style="margin-bottom: 50px;">
             <label>Schlüsselkosten</label>
             <input name="KeyCost" type="number" required value="@ViewBag.SystemChois.Price" step="0,1" min="0" class="form-control" />
@@ -216,6 +228,12 @@
             <div style="margin-bottom: 50px;margin-top: 50px">
              <label>System</label>
             <input name="KeyName" required id="NameSys" type="text" class="form-control" />
+            </div>
+
+
+            <div id="Image-load_item" class="mb-5">
+                <label for="ImagesKey">Schlüssel Bild:</label>
+                <input type="file" name="ImagesKey" multiple class="form-control" />
             </div>
 
             <div style="margin-bottom: 50px;">
