--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Edit/Edit_Profil_Knaufzylinder.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Edit/Edit_Profil_Knaufzylinder.cshtml
@@ -179,7 +179,7 @@
                                         </thead>
                                         <tbody id="kleiIntern">
 
-                                            @foreach (var list in kleinAussen.Doppel_Innen_klein)
+                                            @foreach (var list in kleinAussen.Aussen_Innen_Knauf_klein)
                                             {
                                                 <tr>
                                                     <th><input name="internDoppelKlein" id="interKlein" class="form-control" value="@list.Intern" type="number" step="0,01" /></th>
