--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Konfigurator/Finisher.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Konfigurator/Finisher.cshtml
@@ -190,12 +190,16 @@
                                 <div>
                                     <input style="border: none;" id="compName" type="hidden" value="@item.companyName" />
                                         <h6>außen</h6>
-                                    <select class="form-select" name="DoppelAussen" id="Aussen" onchange="selectParamAussen(@d,'Doppelzylinder',event.target.selectedIndex)">
-                                        <option style="display:none" selected>@ViewBag.DAussen[elemNum]</option>
-
+                                        <select class="form-select" name="DoppelAussen" id="Aussen" onchange="selectParamAussen(@d,'Doppelzylinder',event.target.selectedIndex,event.target.value,@item.Id)">
                                         @for (int i = 0; i < ViewBag.Dopelzylinderaussen.Count; i++)
                                         {
-                                                    <option id="OptionA">@ViewBag.Dopelzylinderaussen[i]</option>
+                                                if (@ViewBag.Dopelzylinderaussen[i] == @ViewBag.DAussen[elemNum])
+                                                {
+                                                    <option selected id="OptionA">@ViewBag.Dopelzylinderaussen[i]</option>
+                                                }
+                                                else{
+                                                     <option id="OptionA">@ViewBag.Dopelzylinderaussen[i]</option>
+                                                }
                                         }
                                     </select>
                                     <input type="hidden" id="Aussen-@d" />
@@ -203,35 +207,21 @@
                                 <div>
                                         <h6>innen</h6>
                                     <select class="form-select" name="DoppelIntern" id="Intern" onchange="selectParamIntern(@d,'Doppelzylinder',event.target.selectedIndex)">
-                                        <option style="display:none" selected>@ViewBag.DInter[elemNum]</option>
-
+                                        
                                      @for (int i = 0; i < ViewBag.DopelzylinderIntern.Count; i++)
                                      {
-                                            if (ViewBag.CountDoppelInter == "null")
-                                            {
-                                                    if (i < ViewBag.CountKlein)
+                                                    if (@ViewBag.DopelzylinderIntern[i] == @ViewBag.DInter[elemNum])
                                                     {
-                                                        <option id="OptionI">@ViewBag.DopelzylinderIntern[i]</option>
+                                                    <option id="OptionI" selected>@ViewBag.DopelzylinderIntern[i]</option>
                                                     }
                                                     else
                                                     {
-                                                       
-                                                      <option style="display:none" id="OptionI">@ViewBag.DopelzylinderIntern[i]</option>
-                                                        
+                                                      <option id="OptionI">@ViewBag.DopelzylinderIntern[i]</option> 
                                                     }
-
-                                            }
-                                                else
-                                                {
-                                                    
-                                                        <option id="OptionI">@ViewBag.DopelzylinderIntern[i]</option>
-                                                    
-                                                }
-                                            
-                                            
-                                                    
                                      }
-                                    </select>
+                                    
+                                 </select>
+
                                     <input type="hidden" id="Innen-@d"  />
                                 </div>
                                 </div>
@@ -399,11 +389,18 @@
                             <div>
                                         <h6>außen</h6>
                                     <input style="border: none;" id="compName" type="hidden" value="@item.companyName" />
-                                    <select class="form-select" name="KnayfAussen" id="Aussen" onchange="selectParamAussen(@d,'Knaufzylinder',event.target.selectedIndex)">
-                                    <option style="display:none" selected>@ViewBag.KAussen[elemNum]</option>
+                                        <select class="form-select" name="KnayfAussen" id="Aussen" onchange="selectParamAussen(@d,'Knaufzylinder',event.target.selectedIndex,event.target.value,@item.Id)">
                                     @for (int i = 0; i < ViewBag.KnayfZelinderAussen.Count; i++)
                                     {
-                                        <option id="OptionA">@ViewBag.KnayfZelinderAussen[i]</option>
+                                                if (@ViewBag.KnayfZelinderAussen[i] == @ViewBag.KAussen[elemNum])
+                                                {
+                                                    <option selected id="OptionA">@ViewBag.KnayfZelinderAussen[i]</option>
+                                                }
+                                                else
+                                                {
+                                                    <option id="OptionA">@ViewBag.KnayfZelinderAussen[i]</option>
+                                                }
+                                        
                                     }
                                 </select>
                                     <input type="hidden" id="Aussen-@d" />
@@ -411,25 +408,17 @@
                             <div>
                                 <h6>innen</h6>
                                     <select class="form-select" name="KnayfIntern" id="Intern" onchange="selectParamIntern(@d,'Knaufzylinder',event.target.selectedIndex)">
-                                    <option style="display:none" selected>@ViewBag.KInter[elemNum]</option>
 
                                     @for (int i = 0; i < ViewBag.KnayfZelinderIntern.Count; i++)
                                     {
-                                                if (ViewBag.CountKnayfInter  == "null")
-                                                {
-                                                    if (i < ViewBag.CountKlein)
+                                                    if (@ViewBag.KnayfZelinderIntern[i] == @ViewBag.KInter[elemNum])
                                                     {
-                                                       <option id="OptionI">@ViewBag.KnayfZelinderIntern[i]</option>
+                                                    <option selected id="OptionI">@ViewBag.KnayfZelinderIntern[i]</option>
                                                     }
                                                     else
                                                     {
-                                                        <option style="display:none" id="OptionI">@ViewBag.KnayfZelinderIntern[i]</option>
+                                                        <option id="OptionI">@ViewBag.KnayfZelinderIntern[i]</option>
                                                     }
-                                                }
-                                                else
-                                                {
-                                                    <option id="OptionI">@ViewBag.KnayfZelinderIntern[i]</option>
-                                                }   
                                     }
 
                                 </select>
@@ -605,11 +594,20 @@
                             <div>
                                 <h6>außen</h6>
                                     <input style="border: none;" id="compName" type="hidden" value="@item.companyName" />
-                                    <select name="HalbAussen" id="Aussen" class="form-select" onchange="selectParamAussen(@d,'Halbzylinder',event.target.selectedIndex)">
+                                    <select name="HalbAussen" id="Aussen" class="form-select" onchange="selectParamAussen(@d,'Halbzylinder',event.target.selectedIndex,event.target.value,@item.Id)">
                                     <option style="display:none" selected>@ViewBag.HalbOrderAussen[elemNum]</option>
                                     @for (int i = 0; i < ViewBag.AussenHalb.Count; i++)
                                     {
-                                       <option id="OptionA">@ViewBag.AussenHalb[i]</option>
+                                         if (@ViewBag.AussenHalb[i] == @ViewBag.HalbOrderAussen[elemNum])
+                                         {
+                                             <option selected id="OptionA">@ViewBag.AussenHalb[i]</option>
+                                         }
+                                         else
+                                         {
+                                                <option id="OptionA">@ViewBag.AussenHalb[i]</option>
+                                         }
+
+                                      
                                     }
                                 </select>
                                     <input type="hidden" id="Aussen-@d" />
@@ -1158,6 +1156,7 @@
 } 
 @section scripts
 {
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script>
 
         let DoppelInfo = @Html.Raw(ViewBag.DopelzylinderJson ?? "[]");
@@ -1172,15 +1171,15 @@
 
     let VorhanSize = @Html.Raw(ViewBag.VorhanschlosSizeJson ?? "[]");
 
-        let DoppelOptions = @Html.Raw(ViewBag.DoppelOptionsNameJson ?? "[]") ;
+    let DoppelOptions = @Html.Raw(ViewBag.DoppelOptionsNameJson ?? "[]") ;
     let DoppelOptionsValue = @Html.Raw(ViewBag.DoppelOptionsValue ?? "[]");
     let DoppelCostValue = @Html.Raw(ViewBag.optionsPrise ?? "[]") ;
 
     let knayfOptionName = @Html.Raw(ViewBag.OptionsNameKnayfJson ?? "[]");
     let KnayfOptionPrice = @Html.Raw(ViewBag.optionsPriseKnayf ?? "[]") ;
-        let KnayfOptionsValue = @Html.Raw(ViewBag.optionsValueKnayfJson ?? "[]") ;
+    let KnayfOptionsValue = @Html.Raw(ViewBag.optionsValueKnayfJson ?? "[]") ;
 
-        let HalbOptionsName = @Html.Raw(ViewBag.HalbOptionsNameJson ?? "[]") ;
+    let HalbOptionsName = @Html.Raw(ViewBag.HalbOptionsNameJson ?? "[]") ;
     let HalbOptionsValue = @Html.Raw(ViewBag.HalbOptionsValueJson ?? "[]") ;
     let HalbOptionsValueCost = @Html.Raw(ViewBag.HalbOptionsValueCostJson ?? "[]") ;
 
@@ -1192,23 +1191,17 @@
     let VorhanSchlossValue = @Html.Raw(ViewBag.VorhanValueJson ?? "[]") ;
     let VorhanSchlossValueCost = @Html.Raw(ViewBag.VorhanValueCostJson ?? "[]");
 
-        let AussenRundOptionsName = @Html.Raw(ViewBag.AussenNameJson ?? "[]") ;
-        let AussenRundOptionsValue = @Html.Raw(ViewBag.AussenValueJson ?? "[]") ;
-        let AussenRundOptionsCostValue = @Html.Raw(ViewBag.AussenValueCostJson ?? "[]") ;
+    let AussenRundOptionsName = @Html.Raw(ViewBag.AussenNameJson ?? "[]") ;
+    let AussenRundOptionsValue = @Html.Raw(ViewBag.AussenValueJson ?? "[]") ;
+    let AussenRundOptionsCostValue = @Html.Raw(ViewBag.AussenValueCostJson ?? "[]") ;
      
-            let kleinKnayfCountItem = @Html.Raw(ViewBag.CountKnayfInter ?? "[]");
-            let priceKnayfAussenCost = @Html.Raw(ViewBag.KnayfAussenCost ?? "[]");
-            let priceKnayfInternCost = @Html.Raw(ViewBag.KnayfInternCost ?? "[]");
-            let kleinKnayf = @Html.Raw(ViewBag.KnayfInternKlein ?? "[]");
-            let kleinKnayfPrice = @Html.Raw(ViewBag.KnayfzylinderInternKleinPreis ?? "[]");
-            let KnayfZiseNormal = @Html.Raw(ViewBag.KnayfzylinderInternNormal ?? "[]");
+    let priceKnayfAussenCost = @Html.Raw(ViewBag.KnayfAussenCost ?? "[]");
+    let priceKnayfInternCost = @Html.Raw(ViewBag.KnayfInternCost ?? "[]");
+    let KnayfZiseNormal = @Html.Raw(ViewBag.KnayfzylinderInternNormal ?? "[]");
 
-            let kleinPrice = @Html.Raw(ViewBag.DopelzylinderInternKleinPreis ?? "[]");
-            let normalDopelSize = @Html.Raw(ViewBag.DopelzylinderInternNormal ?? "[]");
-            let kleinSize = @Html.Raw(ViewBag.DopelzylinderInternKlein ?? "[]");
-            let kleinCountItem = @Html.Raw(ViewBag.CountDoppelInter ?? "[]");
-            let priceDoppelInternCost = @Html.Raw(ViewBag.CostDoppelIntern ?? "[]");
-            let priceDoppelAussenCost = @Html.Raw(ViewBag.CostDoppelAussen ?? "[]");       
+    let normalDopelSize = @Html.Raw(ViewBag.DopelzylinderInternNormal ?? "[]");         
+    let priceDoppelInternCost = @Html.Raw(ViewBag.CostDoppelIntern ?? "[]");
+    let priceDoppelAussenCost = @Html.Raw(ViewBag.CostDoppelAussen ?? "[]");       
 
    let halbAussenCost = @Html.Raw(ViewBag.CostHalbSize ?? "[]");
 
@@ -1315,7 +1308,7 @@
                                                         <div>
                                                                     <h6>außen</h6>
                                                                                   <input style="border: none;" id="compName" type="hidden" value="${[DoppelInfo[0].companyName]}" />
-                                                                                  <select class="form-select" name="DoppelAussen" id="Aussen" onchange="selectParamAussen(${BlockN},'Doppelzylinder',event.target.selectedIndex+1)">
+                                                                                                                      <select class="form-select" name="DoppelAussen" id="Aussen" onchange="selectParamAussen(${BlockN},'Doppelzylinder',event.target.selectedIndex+1,event.target.value,${[DoppelInfo[0].Id]})">
 
                                                     @for (int i = 0; i < @ViewBag.Dopelzylinderaussen.Count; i++)
                                                     {
@@ -1503,7 +1496,7 @@
                                                           <div>
                                                                       <h6>außen</h6>
                                                                                            <input style="border: none;" id="compName" type="hidden" value="${HalbInfo[0].companyName}" />
-                                                                                           <select name="HalbAussen" id="Aussen" class="form-select" onchange="selectParamAussen(${BlockN},'Halbzylinder',event.target.selectedIndex+1)">
+                                                                                           <select name="HalbAussen" id="Aussen" class="form-select" onchange="selectParamAussen(${BlockN},'Halbzylinder',event.target.selectedIndex+1,event.target.value,${[HalbInfo[0].Id]})">
 
                                                     @for (int i = 0; i < ViewBag.AussenHalb.Count; i++)
                                                     {
@@ -1674,16 +1667,14 @@
                                                                                       <input style="border: none;" id="compName" type="hidden" value="${[KnayfInfo[0].companyName]}" />
 
 
-                                                                               <select class="form-select" name="KnayfAussen" id="Aussen" onchange="selectParamAussen(${BlockN},'Knaufzylinder',event.target.selectedIndex+1)">
+                                              <select class="form-select" name="KnayfAussen" id="Aussen" onchange="selectParamAussen(${BlockN},'Knaufzylinder',event.target.selectedIndex+1,event.target.value,${[KnayfInfo[0].Id]})">
 
-                                        @for (int i = 0; i < ViewBag.KnayfZelinderAussen.Count; i++)
-                                        {
-                                              <option id="OptionA">@ViewBag.KnayfZelinderAussen[i]</option>
-                                        }
+                                                @for (int i = 0; i < ViewBag.KnayfZelinderAussen.Count; i++)
+                                                {
+                                                    <option id="OptionA">@ViewBag.KnayfZelinderAussen[i]</option>
+                                                }
 
-                                                                      </select>
-
-
+                                               </select>
                                                            <input type="hidden" id="Aussen-${BlockN}" />
                                                       </div>
                                 }
@@ -2204,7 +2195,7 @@
                         }
                         else {
                             if (Innen.options[f].value === Innen.value) {
-                                oldInnen.value = f - 1;
+                                oldInnen.value = f-1;
                                 break;
                             }
                         }
