--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Areas/Identity/Pages/Account/Register.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Areas/Identity/Pages/Account/Register.cshtml
@@ -3,88 +3,6 @@
 @{
     ViewData["Title"] = "Register";
 }
-    <style>
-    .step-progress {
-        display: flex;
-        justify-content: space-between;
-        margin-top: 20px;
-        flex-wrap: wrap; /* Даем возможность переноса элементов на меньших экранах */
-    }
-
-    .step {
-        position: relative;
-        text-align: center;
-        padding: 10px;
-        background-color: #ddd;
-        border-radius: 5px;
-        font-weight: bold;
-        transition: background-color 0.3s ease;
-        min-width: 120px; /* Ограничиваем минимальную ширину для каждого шага */
-        margin: 5px; /* Добавляем немного пространства между шагами */
-        flex-grow: 1; /* Растягиваем шаги, чтобы они заполняли пространство */
-    }
-
-        .step::before {
-            content: "";
-            position: absolute;
-            top: 50%;
-            left: -20px;
-            width: 20px;
-            height: 20px;
-            background-color: #ddd;
-            border-radius: 50%;
-            transform: translateY(-50%);
-            transition: background-color 0.3s ease;
-        }
-
-        .step:first-child::before {
-            left: 0;
-        }
-
-    .step-active {
-        background-color:var(--primary-color);
-        color: white;
-    }
-
-        .step-active::before {
-            background-color: var(--primary-color);
-        }
-
-    .step-completed {
-        background-color: #198754;
-        color: white;
-    }
-
-        .step-completed::before {
-            background-color: #198754;
-        }
-
-    .step:not(:last-child)::after {
-        content: "";
-        position: absolute;
-        top: 50%;
-        left: 100%;
-        width: 100%;
-        height: 2px;
-        background-color: #ddd;
-        transform: translateY(-50%);
-        transition: background-color 0.3s ease;
-    }
-
-    .step-form {
-        display: none;
-    }
-
-        .step-form.active {
-            display: block;
-        }
-
-    .step-active + .step::after,
-    .step-completed + .step::after {
-        background-color: #28a745;
-    }
-
-</style>
 
 <div class="shadow-lg  mb-5 bg-body-tertiary rounded" id="registerPage">
     <div class="row">
@@ -92,7 +10,9 @@
             <div class="container mt-5">
                 <!-- Прогресс-бар пошаговый -->
                 <div class="progress">
-                    <div class="progress-bar progress-bar-striped progress-bar-animated" id="progress-bar" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">Warenkorb</div>
+                    <div class="progress-bar progress-bar-striped progress-bar-animated" style="background-color: #198754" id="progress-bar" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">
+                        Warenkorb
+                    </div>
                 </div>
 
                 <div class="mt-4 d-flex flex-column flex-sm-row justify-content-between">
@@ -110,7 +30,7 @@
                             <!-- Пост 1 -->
                             <div class="list-group-item mt-5">
                                 <div class="d-flex w-100 justify-content-between">
-                                    <h5 class="mb-4">Bestellen ohne Registrierung</h5>
+                                    <h4 class="mb-4">Bestellen ohne Registrierung</h4>
                                 </div>
                                 <p class="mb-4">Deine Daten werden nur für diese Bestellung erhoben und müssen für weitere Bestellungen erneut angegeben werden.</p>
                             </div>
