--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Konfigurator/Finisher.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Konfigurator/Finisher.cshtml
@@ -190,12 +190,17 @@
                                 <div>
                                     <input style="border: none;" id="compName" type="hidden" value="@item.companyName" />
                                         <h6>außen</h6>
-                                        <select class="form-select" name="DoppelAussen" id="Aussen" onchange="selectParamAussen(@d,'Doppelzylinder',event.target.selectedIndex,event.target.value,@item.Id)">
-                                          <option style="display:none" selected>@ViewBag.DAussen[elemNum]</option>
+                                        <select class="form-select" name="DoppelAussen" id="Aussen" onchange="selectParamAussen(@d,'Doppelzylinder',event.target.selectedIndex,event.target.value,@item.Id)">                                         
                                         @for (int i = 0; i < ViewBag.Dopelzylinderaussen.Count; i++)
                                         {
-                                               
-                                             <option id="OptionA">@ViewBag.Dopelzylinderaussen[i]</option>
+                                               if (ViewBag.DAussen[elemNum] == ViewBag.Dopelzylinderaussen[i])
+                                               {
+                                                    <option id="OptionA"  selected>@ViewBag.Dopelzylinderaussen[i]</option>
+                                               }
+                                               else{
+                                                   <option id="OptionA">@ViewBag.Dopelzylinderaussen[i]</option>
+                                               }
+                                             
                                                
                                         }
                                     </select>
@@ -203,13 +208,18 @@
                                 </div>
                                 <div>
                                         <h6>innen</h6>
-                                    <select class="form-select" name="DoppelIntern" id="Intern" onchange="selectParamIntern(@d,'Doppelzylinder',event.target.selectedIndex)">
+                                        <select class="form-select" name="DoppelIntern" id="Intern" onchange="selectParamIntern(@d,'Doppelzylinder',event.target.selectedIndex,event.target.value,@item.Id)">
                                      
-                                        <option style="display:none" selected>@ViewBag.DInter[elemNum]</option>
                                      @for (int i = 0; i < ViewBag.DopelzylinderIntern.Count; i++)
                                      {
-                                          <option id="OptionI">@ViewBag.DopelzylinderIntern[i]</option> 
-                                              
+                                                if (ViewBag.DInter[elemNum] == ViewBag.DopelzylinderIntern[i])
+                                                {
+                                                    <option id="OptionI" selected>@ViewBag.DopelzylinderIntern[i]</option>
+                                                }
+                                                else
+                                                {
+                                                    <option id="OptionI">@ViewBag.DopelzylinderIntern[i]</option>
+                                                }      
                                      }
                                     
                                  </select>
@@ -379,25 +389,37 @@
                             <div id="Size-@d" class="SizeProduct">
                             <div class="btn-group" role="group" aria-label="Basic outlined example">
                             <div>
-                                        <h6>außen</h6>
+                                <h6>außen</h6>
                                     <input style="border: none;" id="compName" type="hidden" value="@item.companyName" />
-                                        <select class="form-select" name="KnayfAussen" id="Aussen" onchange="selectParamAussen(@d,'Knaufzylinder',event.target.selectedIndex,event.target.value,@item.Id)">
-                                            <option style="display:none" selected>@ViewBag.KAussen[elemNum]</option>
+                                    <select class="form-select" name="KnayfAussen" id="Aussen" onchange="selectParamAussen(@d,'Knaufzylinder',event.target.selectedIndex,event.target.value,@item.Id)">
+                                   
                                     @for (int i = 0; i < ViewBag.KnayfZelinderAussen.Count; i++)
                                     {
-                                        <option id="OptionA">@ViewBag.KnayfZelinderAussen[i]</option>
-  
+                                                if (ViewBag.KAussen[elemNum] == ViewBag.KnayfZelinderAussen[i])
+                                                {
+                                                    <option id="OptionA" selected>@ViewBag.KnayfZelinderAussen[i]</option>
+                                                }
+                                                else
+                                                {
+                                                    <option id="OptionA">@ViewBag.KnayfZelinderAussen[i]</option>
+                                                }           
                                     }
                                 </select>
                                     <input type="hidden" id="Aussen-@d" />
                             </div>
                             <div>
                                 <h6>innen</h6>
-                                    <select class="form-select" name="KnayfIntern" id="Intern" onchange="selectParamIntern(@d,'Knaufzylinder',event.target.selectedIndex)">
-                                      <option style="display:none" selected>@ViewBag.KInter[elemNum]</option>
+                                   <select class="form-select" name="KnayfIntern" id="Intern" onchange="selectParamIntern(@d,'Knaufzylinder',event.target.selectedIndex,event.target.value,@item.Id)">
+                                    
                                     @for (int i = 0; i < ViewBag.KnayfZelinderIntern.Count; i++)
-                                    {         
-                                        <option id="OptionI">@ViewBag.KnayfZelinderIntern[i]</option>       
+                                    {
+                                        if (ViewBag.KInter[elemNum] == ViewBag.KnayfZelinderIntern[i])
+                                        {
+                                                    <option id="OptionI" selected>@ViewBag.KnayfZelinderIntern[i]</option>
+                                        }
+                                        else{
+                                           <option id="OptionI">@ViewBag.KnayfZelinderIntern[i]</option>  
+                                        }     
                                     }
 
                                 </select>
@@ -1130,16 +1152,16 @@
                              
                                 const countKey = Array.from(countKeyInputs).map(input => parseInt(input.value, 10));
                                 const countTür = Array.from(countTürInputs).map(input => parseInt(input.value, 10));
-@* 
+
                                 const requestData = {
-                                    UserKey: @Model.UserKey, 
+                                    UserKey: '@Model.userKey', 
                                     aussen: [12.5, 15.3, 20.1], 
                                     innen: [10.2, 13.4, 18.7],  
                                     Options: ["Option1", "Option2", "Option3"],
                                     count: countTür, 
                                     CountKey: countKey
                                 };
- *@
+
                              
                                 axios.post('/GuestController/OrdersUpdate', requestData, {
                                     headers: {
@@ -1212,6 +1234,7 @@
     let normalDopelSize = @Html.Raw(ViewBag.DopelzylinderInternNormal ?? "[]");         
     let priceDoppelInternCost = @Html.Raw(ViewBag.CostDoppelIntern ?? "[]");
     let priceDoppelAussenCost = @Html.Raw(ViewBag.CostDoppelAussen ?? "[]");       
+
 
    let halbAussenCost = @Html.Raw(ViewBag.CostHalbSize ?? "[]");
 
@@ -2190,7 +2213,7 @@
                         {
                                 if (Aussen.options[t].value === Aussen.value) 
                                 {
-                                    oldAussen.value = t-1;
+                                    oldAussen.value = t;
                                     break; 
                                 }
                         }
@@ -2205,7 +2228,7 @@
                         }
                         else {
                             if (Innen.options[f].value === Innen.value) {
-                                oldInnen.value = f-1;
+                                oldInnen.value = f;
                                 break;
                             }
                         }
